--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </form>
 
     <div id="no-mobile">
-        <span>Your screen is too big ㅠㅠ</span>
+        <span>Your screen is too big</span>
       </div>
 
     
